--- a/Romanian/main/Browser.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Browser.apk/res/values-ro/arrays.xml
@@ -8,6 +8,11 @@
         <item>Verde</item>
         <item>Albastru</item>
     </string-array>
+    <string-array name="pref_fling_on_border_gesture_entries">
+        <item>Pagina anterioară?</item>
+        <item>Comutare file</item>
+        <item>Nimic</item>
+    </string-array>
     <string-array name="pref_homepage_choices">
         <item>Pagina de pornire implicită</item>
         <item>Personalizată</item>
@@ -40,11 +45,6 @@
     <string-array name="shortcut_dialog_title">
         <item>Mesaj din Browser</item>
         <item>Urmăriți olimpiada cu Mi</item>
-    </string-array>
-    <string-array name="pref_fling_on_border_gesture_entries">
-        <item>Pagina anterioară??</item>
-        <item>Comutare file</item>
-        <item>Nimic</item>
     </string-array>
     <string-array name="baidu">
         <item>百度</item>
