--- a/Romanian/main/CleanMaster.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/CleanMaster.apk/res/values-ro/arrays.xml
@@ -66,4 +66,14 @@
         <item>Clean Master</item>
         <item>Tencent</item>
     </string-array>
+    <string-array name="wechat_menu_delete">
+        <item>Goliți</item>
+    </string-array>
+    <string-array name="wechat_menu_delete_whitelist">
+        <item>Goliți</item>
+    </string-array>
+    <string-array name="wechat_menu_delete_whitelist_view">
+        <item>Goliți</item>
+        <item>Vizualizați</item>
+    </string-array>
 </resources>
