--- a/Romanian/main/DeskClock.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/DeskClock.apk/res/values-ro/arrays.xml
@@ -30,6 +30,25 @@
         <item>Lu - Vi</item>
         <item>Personalizat</item>
     </string-array>
+    <string-array name="aqi_value">
+        <item>Bun</item>
+        <item>Satisfăcător</item>
+        <item>Poluare moderată</item>
+        <item>Rău</item>
+        <item>Foarte rău</item>
+        <item>Sever</item>
+    </string-array>
+    <string-array name="weather_tips_value">
+        <item>Reduceți activitățile în aer liber</item>
+        <item>Pericol de alunecare</item>
+        <item>Furtună, conduceți cu atenție sporită</item>
+        <item>Vreme cețoasă, purtați mască</item>
+        <item>Luați umbrela când ieșiți din casă</item>
+        <item>Atenție la drum</item>
+        <item>Furtună de nisip, purtați mască</item>
+        <item>Vă dorim să aveți o zi minunată</item>
+    </string-array>
+   
     <string-array name="alarm_set">
         <item>Alarma va suna peste mai puțin de un minut.</item>
         <item>Alarma va suna peste %1$s.</item>
