--- a/Romanian/main/PersonalAssistant.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/PersonalAssistant.apk/res/values-ro/arrays.xml
@@ -17,6 +17,39 @@
         <item>dori</item>
         <item>doar</item>
     </string-array>
+    <string-array name="day_time_space">
+        <item>Miezul nopții</item>
+        <item>Înainte de zorii zilei</item>
+        <item>Dimineață</item>
+        <item>Amiază</item>
+        <item>După amiază</item>
+        <item>Seară</item>
+        <item>În timpul nopții</item>
+    </string-array>
+    <string-array name="aqi_title_prefix">
+        <item>aer%1$s</item>
+        <item>aer%1$s</item>
+        <item>%1$s</item>
+        <item>%1$s</item>
+        <item>%1$s</item>
+        <item>%1$s</item>
+    </string-array>
+    <string-array name="aqi_title_append">
+        <item>%1$s</item>
+        <item>%1$s</item>
+        <item>%1$scontaminare</item>
+        <item>%1$scontaminare</item>
+        <item>%1$scontaminare</item>
+        <item>%1$scontaminare</item>
+    </string-array>
+    <string-array name="aqi_title">
+        <item>excelent</item>
+        <item>bun</item>
+        <item>moale</item>
+        <item>moderat</item>
+        <item>sever</item>
+        <item>serios</item>
+    </string-array>
     <string-array name="express_watched_app_filter">
         <item>Curier:</item>
         <item>Numărul AWB:</item>
