--- a/Romanian/main/framework-res.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/framework-res.apk/res/values-ro/arrays.xml
@@ -63,5 +63,13 @@
         <item>Mențineți degetul mai mult timp pe senzor</item>
         <item></item>
         <item></item>
+        <item></item>
+        <item></item>
+        <item></item>
+        <item></item>
+        <item></item>
+        <item></item>
+        <item>Mutați degetul încet</item>
+        <item>Această amprentă a fost adăugată, folosiți alt deget</item>
     </string-array>
 </resources>
