--- a/Romanian/main/SoundRecorder.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/SoundRecorder.apk/res/values-ro/arrays.xml
@@ -20,10 +20,16 @@
         <item>HD</item>
     </string-array>
     <string-array name="record_scenes_summaries">
-        <item>Înregistrare pe 2 canale, redare stereo în căști</item>
-        <item>"Apropiați microfonul de sursă pentru a obține rezultate mai bune"</item>
+        <item>Înregistrați muzică la calitate înaltă</item>
+        <item>Apropiați microfonul de sursa sunetului pentru a obține rezultate mai bune</item>
         <item>Plasați telefonul între 2 persoane pentru a înregistra clar vocea amândurora</item>
-        <item>Tehnologia High Dynamic Range permite captarea mult mai fidelă a sunetului</item>
+        <item>Tehnologia High Dynamic Range permite captarea mult mai fidelă a sunetului de către microfon</item>
+    </string-array>
+    <string-array name="record_scenes_summaries_stereo">
+        <item>Înregistrare pe 2 canale, ascultați sunet stereo în căști</item>
+        <item>Apropiați microfonul de sursa sunetului pentru a obține rezultate mai bune</item>
+        <item>Plasați telefonul între 2 persoane pentru a înregistra clar vocea amândurora</item>
+        <item>Tehnologia High Dynamic Range permite captarea mult mai fidelă a sunetului de către microfon</item>
     </string-array>
     <string-array name="record_quality_entries">
         <item>Înaltă</item>
