--- a/Romanian/main/Browser.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Browser.apk/res/values-ro/arrays.xml
@@ -60,7 +60,7 @@
         <item>http://www.bing.com/s/wlflag.ico</item>
         <item>http://www.bing.com/search?q={searchTerms}</item>
         <item>UTF-8</item>
-        <item>http://api.bing.com/osjson.aspx?query={searchTerms}&amp;language={language}</item>
+        <item>http://api.bing.com/osjson.aspx?query={searchTerms}&amp;market={language}</item>
     </string-array>
     <string-array name="bookmarks">
         <item>Google</item>
@@ -139,7 +139,7 @@
         <item>http://www.google.com/favicon.ico</item>
         <item>http://www.google.com/search?hl={language}&amp;ie={inputEncoding}&amp;source=android-browser&amp;q={searchTerms}</item>
         <item>UTF-8</item>
-        <item>http://api.bing.com/osjson.aspx?query={searchTerms}&amp;language={language}</item>
+        <item>http://api.bing.com/osjson.aspx?query={searchTerms}&amp;market={language}</item>
     </string-array>
     <string-array name="search_bar_search_engines_cmcc">
         <item>s139</item>
