--- a/Romanian/main/Calendar.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/plurals.xml
@@ -32,8 +32,8 @@
         <item quantity="one">cu %1$d zi în urmă la %2$s</item>
     </plurals>
     <plurals name="Ndays_after">
-        <item quantity="other">După %1$d zile la %2$s</item>
-        <item quantity="one">După %1$d zi la %2$s</item>
+        <item quantity="other">În %1$d zile la %2$s</item>
+        <item quantity="one">În %1$d zi la %2$s</item>
     </plurals>
     <plurals name="Nweeks">
         <item quantity="other">cu %d săptămâni în urmă</item>
