Revert "Auto fixes by translators.xiaomi.eu"
This reverts commit fcded31f0ee62a11e89c9a035ea63c821f4f55b8.

--- a/Romanian/main/DownloadProviderUi.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/DownloadProviderUi.apk/res/values-ro/arrays.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+     <string-array name="prefEntries_max_bytes_limit">
+        <item>Nelimitat</item>
+        <item>100 MB</item>
+        <item>20 MB</item>
+        <item>10 MB</item>
+        <item>5 MB</item>
+        <item>2 MB</item>
+        <item>1 MB</item>
+        <item>512 KB</item>
+        <item>Se aşteaptă Wi-Fi mereu</item>
+     </string-array>
  	<string-array name="video_type">
         <item>avi</item>
         <item>rmvb</item>
