--- a/Romanian/main/Calendar.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/arrays.xml
@@ -226,4 +226,9 @@
         <item>Timp</item>
         <item>Frecvenţă</item>
      </string-array>
+    <string-array name="repeat_countdown">
+        <item>Niciodată</item>
+        <item>Lunar</item>
+        <item>Anual</item>
+    </string-array>
 </resources>
