--- a/Romanian/main/Email.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Email.apk/res/values-ro/arrays.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="all_month_str">
+        <item>Ian</item>
+        <item>Feb</item>
+        <item>Mar</item>
+        <item>Apr</item>
+        <item>Mai</item>
+        <item>Iun</item>
+        <item>Iul</item>
+        <item>Aug</item>
+        <item>Sep</item>
+        <item>Oct</item>
+        <item>Noi</item>
+        <item>Dec</item>
+    </string-array>
     <string-array name="calendar_remind_string_array">
         <item>La noapte</item>
         <item>Mâine</item>
