--- a/Romanian/main/BugReport.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/BugReport.apk/res/values-ro/plurals.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="time_in_day">
+        <item quantity="other">cu %1$d zile în urmă</item>
+        <item quantity="one">" cu %1$d zi în urmă "</item>
+    </plurals>
     <plurals name="time_in_hour">
         <item quantity="other">cu %1$d ore în urmă</item>
         <item quantity="one">" cu %1$d oră în urmă "</item>
