--- a/Romanian/main/Calculator.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Calculator.apk/res/values-ro/arrays.xml
@@ -42,4 +42,26 @@
         <item>Rate egale</item>
         <item>Rate descrescătoare</item>
     </string-array>
+    <string-array name="unit_data_order_velocity_">
+        <item>c</item>
+        <item>mach</item>
+        <item>m/s</item>
+        <item>km/h</item>
+        <item>km/s</item>
+        <item>nmiph</item>
+        <item>mileph</item>
+        <item>fps</item>
+        <item>ips</item>
+    </string-array>
+    <string-array name="unit_data_order_time_">
+        <item>ani</item>
+        <item>sapt</item>
+        <item>zile</item>
+        <item>ore</item>
+        <item>min</item>
+        <item>sec</item>
+        <item>ms</item>
+        <item>us</item>
+        <item>ps</item>
+    </string-array>
 </resources>
