--- a/Romanian/main/Email.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/Email.apk/res/values-ro/plurals.xml
@@ -52,6 +52,18 @@
         <item quantity="other">%1$d marcate ca fiind spam</item>
         <item quantity="one">%1$d marcat ca fiind spam</item>
      </plurals>
+    <plurals name="day">
+        <item quantity="other">%d zile</item>
+        <item quantity="one">%d zi</item>
+    </plurals>
+    <plurals name="day_after">
+        <item quantity="other">În %d zile</item>
+        <item quantity="one">În %d zi</item>
+    </plurals>
+    <plurals name="day_before">
+        <item quantity="other">cu %d zile în urmă</item>
+        <item quantity="one">cu %d zi în urmă</item>
+    </plurals>
     <plurals name="draft">
         <item quantity="other">Schițe</item>
         <item quantity="one">Schiță</item>
@@ -60,6 +72,10 @@
         <item quantity="other">%1$d mesaje vor fi șterse definitiv.</item>
         <item quantity="one">%1$d mesaj va fi șters definitiv.</item>
      </plurals>
+    <plurals name="month">
+        <item quantity="other">%d luni</item>
+        <item quantity="one">%d lună</item>
+    </plurals>
     <plurals name="move_conversation">
         <item quantity="other">Mutaţi %1$d conversaţii</item>
         <item quantity="one">Mutaţi conversaţia</item>
