--- a/Romanian/main/Settings.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/arrays.xml
@@ -561,7 +561,7 @@
     <string-array name="battery_indicator_style_entries">
         <item>Grafic</item>
         <item>Procent</item>
-        <item>Bară sus</item>
+        <item>Bare sus</item>
      </string-array>
     <string-array name="usb_connection_mode_entries">
         <item>Întreabă la conectare</item>
@@ -818,6 +818,12 @@ Notă: Doar pentru Ubuntu 8.04!"</item>
         <item>În zilele săptămânii</item>
         <item>Personalizată</item>
     </string-array>
+
+
+
+
+
+    
     <string-array name="privacy_password_function_specfication_names">
         <item>Mesaje</item>
         <item>Fotografii</item>
@@ -826,8 +832,8 @@ Notă: Doar pentru Ubuntu 8.04!"</item>
     </string-array>
     <string-array name="standard_configuration_version">
         <item>3 GB</item>
-        <item>32 GB</item>
-        <item>Quad-core 1,8 GHz</item>
+        <item>16 GB</item>
+        <item>Quad-core 2,5 GHz</item>
     </string-array>
     <string-array name="high_configuration_version">
         <item>3 GB</item>
@@ -840,116 +846,19 @@ Notă: Doar pentru Ubuntu 8.04!"</item>
         <item>Quad-core 2,15 GHz</item>
     </string-array>
     <string-array name="standard_configuration_version_description_primary">
-        <item>MTK Helio X10</item>
-        <item>3060 mAh</item>
-        <item>2 GB dual?</item>
-        <item>5,5 inchi</item>
-        <item>4G</item>
-        <item>Cameră foto 13 MP</item>
+        <item>Versiune Android</item>
+        <item>Procesor</item>
+        <item>Capacitate baterie</item>
+        <item>Dimensiune ecran</item>
+        <item>Rezoluție ecran</item>
+        <item>Cameră posterioară</item>
     </string-array>
     <string-array name="standard_configuration_version_description_secondary">
-        <item>Octa-core pe 64 de biți</item>
-        <item>Acumulator detașabil de mare capacitate</item>
-        <item>Spațiu de stocare</item>
-        <item>1080p Full HD</item>
-        <item>Dual SIM</item>
-        <item>Cameră foto cu focalizare în fază?</item>
-    </string-array>
-    <string-array name="standard_configuration_version_device_display_summary">
-        <item>Procesor Helio X10</item>
-        <item>Cameră foto 13 MP</item>
-        <item>Ecran Full HD de 5,5 inchi</item>
-    </string-array>
-    <string-array name="standard_configuration_version_device_display_secondary">
-        <item>Procesor MTK Helio X10 octa-core pe 64 de biți, arhitectură Cortex-A53</item>
-        <item>Fotografiere rapidă la 0,1 secunde, pentru a capta fiecare moment de fericire</item>
-        <item>Conceput pentru tânăr optimizat pentru a sprijini ecran de soare, ecran luminos</item>
-    </string-array>
-    <string-array name="standard_configuration_version_device_display_description_text_1">
-        <item>GB</item>
-        <item>16 MP</item>
-        <item>95% NTSC</item>
-    </string-array>
-    <string-array name="standard_configuration_version_device_display_description_text_2">
-        <item>GB</item>
-        <item>safir</item>
-        <item>600nit</item>
-    </string-array>
-    <string-array name="standard_configuration_version_device_display_description_text_3">
-        <item>memorie</item>
-        <item>Cameră foto Sony iMX298</item>
-        <item>Saturație ridicată a culorii</item>
-    </string-array>
-    <string-array name="standard_configuration_version_device_display_description_text_4">
-        <item>memorie</item>
-        <item>Sticlă de protecție a lentilei</item>
-        <item>luminozitate ecran</item>
-    </string-array>
-    <string-array name="hardware_parameters_title">
-        <item>"CPU、
-memorie</item>
-        <item>dimensiuni</item>
-        <item>baterie</item>
-        <item>"fotografie
-imagistică"</item>
-        <item>"ecran
-afișa"</item>
-        <item>"conexiuni fără fir
-și standardul"</item>
-        <item>"senzor
-și navigare"</item>
-    </string-array>
-    <string-array name="hardware_parameters_summary">
-        <item>"Procesor Octa-core MTK X10 pe 64 de biți
-Standard Edition MTK X10 opt-core procesor de 2.0 GHz
-Versiune MTK X10 opt-core 2.2 GHz
-Putere VR procesor grafic G6200
-2GB memorie Viteza
-LPDDR3
-Capacitate 16GB / versiune de mare capacitate de 32GB
-Suport până la expansiune card de memorie de 32 GB
-Slot pentru cartelă SIM
-Suporta card Micro-SIM, cu dublă carte dual standby
-acumulator 3060mAh
-Baterie litiu-ion polimer
-Capacitate tipică 3060mAh, capacitatea de 3020mAh nominală"</item>
-        <item>"Înălțime: 152mm
-Lățime: 76mm
-Grosime: 8.25mm"</item>
-        <item>"Samsung camera de 13 megapixeli
-0.1 secunde de focalizare de fază
-5 Lens
-F2.2 diafragma, 78 ° unghi larg
-Modul panoramic, nivelmetru, modul manual, modul scenă
-Numărătoare inversă, modul HDR
-Suport pentru 1080p înregistrare video HD
-Camera frontală 500 megapixeli
-Suport 36 inteligent de frumusete
-Suport pentru 1080p înregistrare video HD"</item>
-        <item>"5.5 inch ecran full HD
-1920x1080 rezolutie, 400PPI"</item>
-        <item>"Versiune mobilă
-Sprijin China Mobile 4G / 3G / 2G, rețea de China Unicom 2G
-Standard ridicat versiune / dual Netcom
-Sprijini rețelele China Mobile și China Unicom 4G / 3G / 2G
-Bluetooth 4.0 / 2.4 / 5GHz dublă WLAN / WiFi display / WiFi Direct"</item>
-        <item>"busolă electronică
-senzor de gravitație
-senzor de lumină
-giroscop
-senzor de proximitate
-infraroșu
-GPS-ul
-A-GPS
-GPS + GLONASS
-Beidou"</item>
-    </string-array>
-    <string-array name="standard_configuration_version_device_info_title">
-        <item>Redmi Note 2</item>
-        <item>Caracteristici Redmi Note 2</item>
-    </string-array>
-    <string-array name="standard_configuration_version_share_text">
-        <item>"Redmi Note 2，rapid dar puțin mai greu!
-http://m.mi.com"</item>
+        <item>4.4</item>
+        <item>MediaTek Helio X10</item>
+        <item>3060 mAh</item>
+        <item>5,5 inci</item>
+        <item>1920 x 1080 pixeli</item>
+        <item>13 MP</item>
     </string-array>
 </resources>
