--- a/Romanian/main/FM.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/FM.apk/res/values-ro/arrays.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="sleep_duration_values">
+        <item>15 minute</item>
+        <item>30 de minute</item>
+        <item>45 de minute</item>
+        <item>O oră</item>
+     </string-array>
     <string-array name="search_category_rbds_entries">
         <item>Toate staţiile</item>
         <item>Adult Hits</item>
