--- a/Romanian/main/Mms.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Mms.apk/res/values-ro/arrays.xml
@@ -38,6 +38,10 @@
         <item>Sincronizați toate mesajele</item>
         <item>Sincronizați mesajele de pe cartela SIM selectată</item>
     </string-array>
+    <string-array name="switch_sdk">
+        <item>Serviciul de mesagerie inteligentă Xiaomi</item>
+        <item>Serviciul de mesagerie inteligentă CMCC</item>
+    </string-array>
     <string-array name="select_dialog_items">
         <item>1 secundă</item>
         <item>2 secunde</item>
